<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.login.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="#6EABB3"
            android:text="@string/register_new_account" />

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_username"
            android:hint="@string/username"
            android:drawablePadding="10dp"
            android:background="@drawable/login_edit_background"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:drawablePadding="10dp"
            android:background="@drawable/login_edit_background"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:background="@drawable/login_edit_background"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edt_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:background="@drawable/login_edit_background"
            android:padding="10dp" />


        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/register"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false"
            android:textSize="21sp" />

    </LinearLayout>

</RelativeLayout>