<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/lnl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo_family" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:text="t@gmail.com"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:background="@drawable/login_edit_background"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:text="123456"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:background="@drawable/login_edit_background"
            android:padding="10dp" />

        <Button
            android:id="@+id/btn_logIn"
            android:layout_width="150dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:textSize="21sp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/lnl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:textSize="16sp"
            android:text="@string/forgot_password" />
    </LinearLayout>
</RelativeLayout>